initial zoom integration

--- a/web/index.html
+++ b/web/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8" />
   <meta httpEquiv="X-UA-Compatible" content="IE=edge" />
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <link type="text/css" rel="stylesheet" href="node_modules/@zoomus/websdk/dist/css/bootstrap.css" />
+  <link type="text/css" rel="stylesheet" href="node_modules/@zoomus/websdk/dist/css/react-select.css" />
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
@@ -18,9 +21,11 @@
   <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/manifest.json">
+
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
+  
   <title>%WEB_TITLE%</title>
   <!-- TODO: Bacon: build a reliable system for testing these style changes -->
   <style>
@@ -67,12 +72,9 @@
       -ms-overflow-style: scrollbar;
     }
   </style>
-    <script
-    async
-    defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbdPgQnYA7a7ugMJg4QpYDCltFYPHfTEc"
-    type="text/javascript"
-  ></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbdPgQnYA7a7ugMJg4QpYDCltFYPHfTEc"
+    type="text/javascript"></script>
+
 </head>
 
 <body>
@@ -86,6 +88,8 @@
    //   });
    // }
   </script>
+
+
 </body>
 
 </html>
