Auto complete addresses

--- a/web/index.html
+++ b/web/index.html
@@ -72,7 +72,7 @@
       -ms-overflow-style: scrollbar;
     }
   </style>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbdPgQnYA7a7ugMJg4QpYDCltFYPHfTEc"
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXxLzyv5pYsIPl3XnVX5ONklXvs48zjn0&libraries=places"
     type="text/javascript"></script>
 
 </head>
