--- a/web/index.html
+++ b/web/index.html
@@ -111,7 +111,14 @@
   </noscript>
   <!-- The root element for your Expo app. -->
   <div id="root"></div>
- 
+  <div
+  id="modal"
+  style="
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 0;"></div>
 </body>
 
 </html>
